src/test/ui/parser/issue-32214.stderr
error: type parameters must be declared prior to associated type bindings
  --> $DIR/issue-32214.rs:5:34
   |
LL | pub fn test<W, I: Trait<Item=(), W> >() {}
   |                                  ^ must be declared prior to associated type bindings
help: move the type parameter prior to the first associated type binding
   |
LL | pub fn test<W, I: Trait<W, Item=()> >() {}
   |                         ^^       --

error: aborting due to previous error

